no bug - Import translations from android-l10n r=release a=l10n CLOSED TREE
UltraBlame original commit: e88f22ae1b7de6dff624a2b66de96497e7931bc8

--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-oc/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-oc/strings.xml
@@ -2836,6 +2836,44 @@ string
 !
 -
 -
+Text
+link
+to
+learn
+more
+about
+permission
+requests
+on
+the
+add
+-
+on
+permissions
+dialog
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_dialog_learn_more
+"
+>
+Ne
+saber
+mai
+<
+/
+string
+>
+<
+!
+-
+-
 This
 is
 a
@@ -5994,6 +6032,72 @@ seguretat
 o
 d
 estabilitat
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+blocklisted
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_blocklisted_1
+"
+>
+Aquesta
+extension
+es
+blocada
+per
+enfranh
+las
+politicas
+de
+Mozilla
+e
+fogu
+t
+desactivada
 .
 <
 /
