--- a/mobile/android/fenix/app/src/main/res/values-oc/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-oc/strings.xml
@@ -289,6 +289,46 @@ string
 !
 -
 -
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+"
+Private
+Browsing
+"
+menu
+button
+.
+-
+-
+>
+<
+string
+name
+=
+"
+content_description_private_browsing
+"
+>
+Navegacion
+privada
+<
+/
+string
+>
+<
+!
+-
+-
 Placeholder
 text
 shown
@@ -3399,6 +3439,50 @@ string
 Browser
 menu
 banner
+header
+text
+for
+extensions
+onboarding
+when
+all
+installed
+extensions
+have
+been
+disabled
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_disabled_extensions_banner_onboarding_header
+"
+>
+Av
+tz
+d
+extensions
+installadas
+mas
+son
+pas
+activadas
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+banner
 body
 text
 for
@@ -3464,6 +3548,82 @@ confidencialitat
 e
 la
 seguretat
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+banner
+body
+text
+for
+extensions
+onboarding
+when
+all
+installed
+extensions
+have
+been
+disabled
+.
+The
+first
+parameter
+is
+the
+name
+of
+the
+button
+that
+opens
+extension
+manager
+(
+for
+example
+"
+Manage
+extensions
+"
+)
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_disabled_extensions_banner_onboarding_body
+"
+>
+Per
+utilizar
+d
+extensions
+activatz
+-
+las
+als
+param
+tres
+o
+en
+seleccionant
+%
+s
+ai
+-
+jos
 .
 <
 /
@@ -3697,6 +3857,47 @@ browser_menu_extensions_disabled_description
 Tempor
 riament
 desactivat
+<
+/
+string
+>
+<
+!
+-
+-
+The
+description
+of
+the
+browser
+menu
+appears
+when
+the
+user
+hasn
+'
+t
+installed
+any
+extensions
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_no_extensions_installed_description
+"
+>
+Cap
+d
+extension
+pas
+activada
 <
 /
 string
@@ -3998,6 +4199,76 @@ ecran
 d
 acu
 lh
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+for
+notifying
+users
+that
+Xiaomi
+devices
+require
+additional
+permissions
+to
+add
+to
+home
+screen
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_add_to_homescreen_xiaomi
+"
+>
+Los
+aparelhs
+Xiaomi
+p
+don
+aver
+besonh
+d
+\
+'
+autorizacions
+suplement
+rias
+per
+apondre
+d
+\
+'
+acorchis
+a
+l
+\
+'
+ecran
+d
+\
+'
+acu
+lh
+.
+Verificatz
+v
+stres
+param
+tres
+.
 <
 /
 string
@@ -5177,6 +5448,234 @@ Tornar
 al
 men
 principal
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+for
+bottom
+sheet
+handlebar
+main
+menu
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_main_menu_handlebar_content_description
+"
+>
+Tampar
+lo
+pan
+l
+del
+men
+principal
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+for
+bottom
+sheet
+handlebar
+extensions
+menu
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_extensions_menu_handlebar_content_description
+"
+>
+Tampar
+lo
+pan
+l
+del
+men
+de
+las
+extensions
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+for
+bottom
+sheet
+handlebar
+save
+menu
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_save_menu_handlebar_content_description
+"
+>
+Tampar
+lo
+pan
+l
+del
+men
+d
+enregistrament
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+for
+bottom
+sheet
+handlebar
+tools
+menu
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_tools_menu_handlebar_content_description
+"
+>
+Tampar
+lo
+pan
+l
+del
+men
+de
+las
+aisinas
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+for
+bottom
+sheet
+handlebar
+custom
+tab
+menu
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_custom_tab_menu_handlebar_content_description
+"
+>
+Tampar
+lo
+pan
+l
+del
+men
+dels
+onglets
+personalizats
 <
 /
 string
@@ -6764,11 +7263,74 @@ ignore
 "
 UnusedResources
 "
+moz
+:
+removedIn
+=
+"
+133
+"
 >
 Motor
 de
 rec
 rca
+%
+s
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+Search
+engine
+icon
+.
+The
+parameter
+is
+the
+search
+engine
+name
+(
+for
+example
+:
+DuckDuckGo
+)
+.
+-
+-
+>
+<
+string
+name
+=
+"
+search_engine_icon_content_description_1
+"
+>
+Motor
+de
+rec
+rca
+:
 %
 s
 <
@@ -8377,6 +8939,128 @@ string
 -
 -
 Onboarding
+header
+for
+the
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+Nimbus
+experiments
+do
+not
+support
+string
+placeholders
+.
+Note
+:
+The
+word
+"
+Firefox
+"
+should
+NOT
+be
+translated
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_header
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
+UnusedResources
+"
+>
+Personalizatz
+Firefox
+amb
+d
+extensions
+<
+/
+string
+>
+<
+!
+-
+-
+Onboarding
+sub
+header
+for
+the
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_sub_header
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Apond
+tz
+d
+\
+'
+extensions
+t
+r
+as
+per
+melhorar
+la
+seguretat
+la
+productivitat
+e
+mai
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Onboarding
 add
 -
 ons
@@ -8510,13 +9194,6 @@ name
 "
 onboarding_add_on_explore_more_extensions_2
 "
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
 >
 Exploratz
 d
@@ -8553,13 +9230,6 @@ name
 =
 "
 onboarding_add_on_start_browsing_button_2
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 Comen
@@ -8624,6 +9294,52 @@ UnusedResources
 >
 uBlock
 Origin
+<
+/
+string
+>
+<
+!
+-
+-
+Ublock
+description
+for
+the
+onboarding
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_ublock_description
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Blocatz
+las
+publicitats
+amb
+eficacitat
+.
 <
 /
 string
@@ -8804,6 +9520,167 @@ UnusedResources
 >
 Dark
 Reader
+<
+/
+string
+>
+<
+!
+-
+-
+Label
+for
+the
+number
+of
+reviews
+for
+an
+add
+-
+on
+.
+The
+parameter
+is
+for
+the
+formatted
+number
+of
+reviews
+e
+.
+g
+.
+"
+1
+234
+"
+"
+12
+345
+"
+"
+123
+456
+"
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_reviews_label
+"
+>
+Avises
+:
+%
+1
+s
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+add
+-
+on
+icon
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_icon_content_description
+"
+>
+Ic
+na
+del
+modul
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+add
+add
+-
+on
+button
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_add_button_content_description
+"
+>
+Boton
+Apondre
+un
+modul
+complementari
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+star
+rating
+group
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_star_rating_content_description
+"
+>
+Notat
+%
+1
+s
+de
+5
 <
 /
 string
@@ -20305,6 +21182,49 @@ to
 delete
 multiple
 items
+.
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_delete_folders_confirmation_dialog
+"
+>
+Vol
+tz
+vertadi
+rament
+suprimir
+los
+elements
+seleccionats
+?
+<
+/
+string
+>
+<
+!
+-
+-
+Confirmation
+message
+for
+a
+dialog
+confirming
+if
+the
+user
+wants
+to
+delete
+multiple
+items
 including
 folders
 .
@@ -20420,6 +21340,20 @@ name
 =
 "
 bookmark_saved_snackbar
+"
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 Marcapagina
@@ -21385,6 +22319,45 @@ string
 !
 -
 -
+Bookmark
+snackbar
+message
+for
+deleting
+multiple
+items
+.
+Parameter
+is
+the
+number
+of
+items
+being
+deleted
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_delete_multiple_items
+"
+>
+%
+s
+elements
+suprimits
+<
+/
+string
+>
+<
+!
+-
+-
 Text
 for
 the
@@ -21476,6 +22449,74 @@ dossi
 r
 nov
 l
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+bookmark
+screen
+delete
+bookmark
+navigation
+bar
+button
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_delete_bookmark_content_description
+"
+>
+Suprimir
+lo
+marcapagina
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+bookmark
+screen
+delete
+bookmark
+folder
+navigation
+bar
+button
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_delete_folder_content_description
+"
+>
+Suprimir
+lo
+dossi
+r
 <
 /
 string
@@ -21590,6 +22631,64 @@ string
 !
 -
 -
+Description
+for
+the
+bookmark
+list
+empty
+state
+when
+you
+'
+re
+not
+signed
+into
+sync
+.
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_empty_list_guest_description
+"
+>
+Enregistratz
+los
+sites
+pendent
+la
+navegacion
+.
+Connectatz
+-
+vos
+per
+recuperar
+los
+marcapaginas
+dempu
+i
+d
+\
+'
+autres
+aparelhs
+sincronizats
+.
+<
+/
+string
+>
+<
+!
+-
+-
 Text
 for
 the
@@ -21643,13 +22742,6 @@ name
 =
 "
 bookmark_select_folder_new_folder_button_title
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 Dossi
@@ -25726,6 +26818,20 @@ name
 "
 snackbar_message_bookmarks_saved
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Marcapagina
 apondut
@@ -25775,13 +26881,6 @@ name
 =
 "
 snackbar_message_bookmarks_saved_in
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 Marcapagina
@@ -49528,6 +50627,40 @@ string
 !
 -
 -
+Option
+for
+likert
+scale
+-
+-
+>
+<
+string
+name
+=
+"
+likert_scale_option_8
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Utilizi
+pas
+la
+sincronizacion
+<
+/
+string
+>
+<
+!
+-
+-
 Text
 shown
 in
@@ -49590,6 +50723,133 @@ Firefox
 .
 Triga
 pas
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+in
+prompt
+for
+search
+microsurvey
+.
+Note
+:
+The
+word
+"
+Firefox
+"
+should
+NOT
+be
+translated
+.
+-
+-
+>
+<
+string
+name
+=
+"
+microsurvey_prompt_search_title
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
+UnusedResources
+"
+>
+Ajudatz
+-
+vos
+a
+melhorar
+la
+rec
+rca
+dins
+Firefox
+.
+Pren
+pas
+qu
+una
+minuta
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+in
+prompt
+for
+sync
+microsurvey
+.
+Note
+:
+The
+word
+"
+Firefox
+"
+should
+NOT
+be
+translated
+.
+-
+-
+>
+<
+string
+name
+=
+"
+microsurvey_prompt_sync_title
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
+UnusedResources
+"
+>
+Ajudatz
+-
+vos
+a
+melhorar
+la
+sincronizacion
+dins
+Firefox
+.
+Pren
+pas
+qu
+una
+minuta
+.
 <
 /
 string
@@ -50131,6 +51391,46 @@ Re
 nicializar
 los
 CFR
+<
+/
+string
+>
+<
+!
+-
+-
+Glean
+debug
+tools
+-
+-
+>
+<
+!
+-
+-
+The
+title
+of
+the
+glean
+debugging
+feature
+-
+-
+>
+<
+string
+name
+=
+"
+glean_debug_tools_title
+"
+>
+Aisinas
+de
+desbugatge
+Glean
 <
 /
 string
