--- a/mobile/android/fenix/app/src/main/res/values-si/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-si/strings.xml
@@ -276,6 +276,45 @@ string
 !
 -
 -
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+"
+Private
+Browsing
+"
+menu
+button
+.
+-
+-
+>
+<
+string
+name
+=
+"
+content_description_private_browsing
+"
+>
+.
+<
+/
+string
+>
+<
+!
+-
+-
 Placeholder
 text
 shown
@@ -5145,6 +5184,58 @@ string
 !
 -
 -
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+Search
+engine
+icon
+.
+The
+parameter
+is
+the
+search
+engine
+name
+(
+for
+example
+:
+DuckDuckGo
+)
+.
+-
+-
+>
+<
+string
+name
+=
+"
+search_engine_icon_content_description_1
+"
+>
+:
+%
+s
+<
+/
+string
+>
+<
+!
+-
+-
 Home
 onboarding
 -
@@ -6084,6 +6175,399 @@ ignore
 UnusedResources
 "
 >
+<
+/
+string
+>
+<
+!
+-
+-
+Onboarding
+add
+-
+ons
+card
+button
+for
+start
+browsing
+used
+by
+Nimbus
+experiments
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_start_browsing_button
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Onboarding
+add
+-
+ons
+card
+for
+checking
+more
+add
+-
+ons
+on
+used
+by
+Nimbus
+experiments
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_explore_more_extensions_2
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Onboarding
+add
+-
+ons
+card
+button
+for
+start
+browsing
+used
+by
+Nimbus
+experiments
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_start_browsing_button_2
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Ublock
+name
+for
+the
+onboarding
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+Note
+:
+The
+word
+"
+Ublock
+Origin
+"
+is
+a
+brand
+name
+should
+NOT
+be
+translated
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_ublock_name
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+uBlock
+Origin
+<
+/
+string
+>
+<
+!
+-
+-
+Search
+by
+Image
+name
+for
+the
+onboarding
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+Note
+:
+The
+word
+"
+Search
+by
+Image
+"
+is
+a
+brand
+name
+should
+NOT
+be
+translated
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_search_by_image_name
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Dark
+Reader
+name
+for
+the
+onboarding
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+Note
+:
+The
+word
+"
+Dark
+Reader
+"
+is
+a
+brand
+name
+should
+NOT
+be
+translated
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_dark_reader_name
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Privacy
+Badger
+description
+for
+the
+onboarding
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_dark_reader_description
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Label
+for
+the
+number
+of
+reviews
+for
+an
+add
+-
+on
+.
+The
+parameter
+is
+for
+the
+formatted
+number
+of
+reviews
+e
+.
+g
+.
+"
+1
+234
+"
+"
+12
+345
+"
+"
+123
+456
+"
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_reviews_label
+"
+>
+:
+%
+1
+s
 <
 /
 string
