--- a/mobile/android/focus-android/app/src/main/res/values-oc/strings.xml
+++ b/mobile/android/focus-android/app/src/main/res/values-oc/strings.xml
@@ -1409,52 +1409,6 @@ navegacion
 string
 >
 <
-string
-name
-=
-"
-notification_erase_text_android_14
-"
-moz
-:
-RemovedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Tocatz
-aquesta
-notificacion
-o
-suprimiss
-tz
--
-la
-per
-escafar
-l
-istoric
-de
-navegacion
-d
-una
-mani
-ra
-segura
-.
-<
-/
-string
->
-<
 !
 -
 -
@@ -1912,6 +1866,13 @@ name
 "
 text_selection_search_action_focus
 "
+tools
+:
+ignore
+=
+"
+BrandUsage
+"
 >
 Recercar
 dins
@@ -1976,6 +1937,13 @@ name
 =
 "
 text_selection_search_action_klar
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
 "
 >
 Recercar
@@ -2043,6 +2011,13 @@ name
 =
 "
 text_selection_search_action_focus_beta
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
 "
 >
 Recercar
@@ -2112,6 +2087,13 @@ name
 "
 text_selection_search_action_focus_nightly
 "
+tools
+:
+ignore
+=
+"
+BrandUsage
+"
 >
 Recercar
 dins
@@ -2167,6 +2149,13 @@ name
 =
 "
 about_content
+"
+tools
+:
+ignore
+=
+"
+IncorrectStraightDoubleQuote
 "
 >
 <
@@ -7156,6 +7145,20 @@ name
 "
 onboarding_close_button_content_description
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Tampar
 <
@@ -8616,6 +8619,50 @@ string
 !
 -
 -
+Label
+for
+the
+option
+in
+the
+Focus
+"
+tabs
+tray
+"
+to
+clos
+the
+other
+tabs
+except
+the
+current
+tab
+.
+-
+-
+>
+<
+string
+name
+=
+"
+tabs_tray_action_erase_other
+"
+>
+Tampar
+los
+autres
+onglets
+<
+/
+string
+>
+<
+!
+-
+-
 If
 the
 user
@@ -8674,6 +8721,13 @@ name
 =
 "
 download_firefox
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
 "
 >
 Telecargar
@@ -8836,6 +8890,13 @@ name
 "
 your_rights_content2
 "
+tools
+:
+ignore
+=
+"
+IncorrectStraightDoubleQuote
+"
 >
 <
 !
@@ -8965,6 +9026,14 @@ name
 =
 "
 your_rights_content3
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
+IncorrectStraightDoubleQuote
 "
 >
 <
@@ -9105,6 +9174,13 @@ name
 "
 your_rights_content4
 "
+tools
+:
+ignore
+=
+"
+IncorrectStraightDoubleQuote
+"
 >
 <
 !
@@ -9244,6 +9320,13 @@ name
 =
 "
 your_rights_content5
+"
+tools
+:
+ignore
+=
+"
+IncorrectStraightDoubleQuote
 "
 >
 <
@@ -12049,6 +12132,13 @@ name
 "
 preference_studies_summary
 "
+tools
+:
+ignore
+=
+"
+BrandUsage
+"
 >
 Firefox
 p
@@ -13346,56 +13436,6 @@ open_new_tab_snackbar
 "
 >
 Mostrar
-<
-/
-string
->
-<
-!
--
--
-Text
-displayed
-in
-a
-notification
-when
-the
-user
-enters
-full
-screen
-mode
--
--
->
-<
-string
-name
-=
-"
-full_screen_notification
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-M
-de
-plen
-ecran
-actiu
 <
 /
 string
@@ -14908,6 +14948,13 @@ name
 "
 errorpage_httpsonly_message2
 "
+tools
+:
+ignore
+=
+"
+IncorrectStraightDoubleQuote
+"
 >
 <
 !
@@ -16303,6 +16350,20 @@ name
 "
 exit_fullscreen_with_gesture
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Per
 sortir
@@ -16353,6 +16414,20 @@ name
 =
 "
 exit_fullscreen_with_back_button
+"
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 Per
