--- a/mobile/android/android-components/components/browser/errorpages/src/main/res/values-si/strings.xml
+++ b/mobile/android/android-components/components/browser/errorpages/src/main/res/values-si/strings.xml
@@ -2384,6 +2384,20 @@ name
 "
 mozac_browser_errorpages_no_internet_title
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 <
 /
@@ -2419,8 +2433,53 @@ name
 "
 mozac_browser_errorpages_no_internet_message
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 .
+<
+/
+string
+>
+<
+!
+-
+-
+The
+document
+title
+and
+heading
+of
+an
+error
+page
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_error_code
+"
+>
+:
+NS_ERROR_OFFLINE
 <
 /
 string
