no bug - Import translations from android-l10n r=release a=l10n CLOSED TREE
UltraBlame original commit: 986048f5093925dc43b47d7412e37a0918b99283

--- a/mobile/android/fenix/app/src/main/res/values-eu/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-eu/strings.xml
@@ -283,6 +283,46 @@ string
 !
 -
 -
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+"
+Private
+Browsing
+"
+menu
+button
+.
+-
+-
+>
+<
+string
+name
+=
+"
+content_description_private_browsing
+"
+>
+Nabigatze
+pribatua
+<
+/
+string
+>
+<
+!
+-
+-
 Placeholder
 text
 shown
@@ -3671,6 +3711,45 @@ Behin
 -
 behinean
 desgaituta
+<
+/
+string
+>
+<
+!
+-
+-
+The
+description
+of
+the
+browser
+menu
+appears
+when
+the
+user
+hasn
+'
+t
+installed
+any
+extensions
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_no_extensions_installed_description
+"
+>
+Gaitutako
+hedapenik
+ez
 <
 /
 string
