--- a/mobile/android/fenix/app/src/main/res/values-si/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-si/strings.xml
@@ -4378,6 +4378,56 @@ string
 !
 -
 -
+Browser
+menu
+label
+for
+the
+Delete
+browsing
+data
+on
+quit
+feature
+.
+The
+first
+parameter
+is
+the
+name
+of
+the
+app
+defined
+in
+app_name
+(
+for
+example
+:
+Fenix
+)
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_delete_browsing_data_on_quit
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
 Extensions
 management
 fragment
@@ -4781,6 +4831,41 @@ ignore
 UnusedResources
 "
 >
+<
+/
+string
+>
+<
+!
+-
+-
+Button
+in
+the
+search
+view
+that
+lets
+a
+user
+search
+by
+scanning
+a
+QR
+code
+-
+-
+>
+<
+string
+name
+=
+"
+search_scan_button_2
+"
+>
+QR
 <
 /
 string
@@ -6568,6 +6653,63 @@ onboarding_add_on_reviews_label
 %
 1
 s
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+add
+-
+on
+icon
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_icon_content_description
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+add
+add
+-
+on
+button
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_add_button_content_description
+"
+>
 <
 /
 string
@@ -16273,6 +16415,78 @@ string
 Unsubmitted
 crash
 dialog
+title
+The
+first
+parameter
+is
+the
+name
+of
+the
+app
+(
+e
+.
+g
+.
+Firefox
+)
+-
+-
+>
+<
+string
+name
+=
+"
+unsubmitted_crash_dialog_title
+"
+>
+%
+s
+<
+/
+string
+>
+<
+!
+-
+-
+Unsubmitted
+crash
+dialog
+checkbox
+label
+for
+automatically
+sending
+reports
+in
+the
+future
+-
+-
+>
+<
+string
+name
+=
+"
+unsubmitted_crash_dialog_checkbox_label
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Unsubmitted
+crash
+dialog
 negative
 button
 to
@@ -16288,6 +16502,34 @@ name
 =
 "
 unsubmitted_crash_dialog_negative_button
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Unsubmitted
+crash
+dialog
+positive
+button
+to
+submit
+crash
+report
+-
+-
+>
+<
+string
+name
+=
+"
+unsubmitted_crash_dialog_positive_button
 "
 >
 <
@@ -16330,6 +16572,41 @@ name
 =
 "
 bookmark_delete_folder_confirmation_dialog
+"
+>
+?
+<
+/
+string
+>
+<
+!
+-
+-
+Confirmation
+message
+for
+a
+dialog
+confirming
+if
+the
+user
+wants
+to
+delete
+multiple
+items
+.
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_delete_folders_confirmation_dialog
 "
 >
 ?
@@ -16478,6 +16755,55 @@ UnusedResources
 "
 >
 !
+<
+/
+string
+>
+<
+!
+-
+-
+Snackbar
+title
+that
+confirms
+a
+bookmark
+was
+saved
+into
+a
+folder
+.
+Parameter
+will
+be
+replaced
+by
+the
+name
+of
+the
+folder
+the
+bookmark
+was
+saved
+into
+.
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_saved_in_folder_snackbar
+"
+>
+%
+s
 <
 /
 string
@@ -16930,6 +17256,37 @@ string
 !
 -
 -
+Text
+indicating
+which
+folder
+a
+bookmark
+or
+folder
+will
+be
+saved
+in
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_save_in_label
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
 Bookmark
 NAME
 editing
@@ -17309,6 +17666,34 @@ description
 for
 the
 bookmark
+navigation
+bar
+back
+button
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_navigate_back_button_content_description
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+bookmark
 list
 new
 folder
@@ -17337,6 +17722,67 @@ string
 Content
 description
 for
+the
+bookmark
+screen
+delete
+bookmark
+navigation
+bar
+button
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_delete_bookmark_content_description
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+bookmark
+screen
+delete
+bookmark
+folder
+navigation
+bar
+button
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_delete_folder_content_description
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
 bookmark
 search
 floating
@@ -17351,6 +17797,60 @@ name
 =
 "
 bookmark_search_button_content_description
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Title
+for
+the
+bookmark
+list
+empty
+state
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_empty_list_title
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+for
+the
+button
+to
+navigate
+to
+sync
+authentication
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_empty_list_guest_cta
 "
 >
 <
@@ -20953,6 +21453,53 @@ in
 snackbar
 when
 user
+closes
+multiple
+inactive
+tabs
+.
+%
+1
+s
+will
+be
+replaced
+with
+the
+number
+of
+tabs
+closed
+.
+-
+-
+>
+<
+string
+name
+=
+"
+snackbar_num_tabs_closed
+"
+>
+:
+%
+1
+s
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+in
+snackbar
+when
+user
 bookmarks
 a
 list
@@ -20983,6 +21530,56 @@ ignore
 UnusedResources
 "
 >
+!
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+in
+snackbar
+when
+user
+bookmarks
+a
+list
+of
+tabs
+.
+Parameter
+will
+be
+replaced
+by
+the
+name
+of
+the
+folder
+the
+bookmark
+was
+saved
+into
+.
+-
+-
+>
+<
+string
+name
+=
+"
+snackbar_message_bookmarks_saved_in
+"
+>
+%
+s
 !
 <
 /
@@ -23899,6 +24496,35 @@ string
 !
 -
 -
+Preference
+for
+enhanced
+tracking
+protection
+for
+the
+custom
+protection
+settings
+-
+-
+>
+<
+string
+name
+=
+"
+preference_enhanced_tracking_protection_custom_known_fingerprinters
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
 Button
 label
 for
@@ -24568,6 +25194,67 @@ etp_redirect_trackers_description
 "
 >
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
+for
+fingerprinting
+protection
+for
+the
+custom
+protection
+settings
+-
+-
+>
+<
+string
+name
+=
+"
+etp_suspected_fingerprinters_title
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Category
+of
+trackers
+(
+fingerprinters
+)
+that
+can
+be
+blocked
+by
+Enhanced
+Tracking
+Protection
+-
+-
+>
+<
+string
+name
+=
+"
+etp_known_fingerprinters_title
+"
+>
 <
 /
 string
@@ -30626,6 +31313,36 @@ string
 !
 -
 -
+Hint
+for
+editing
+URL
+of
+a
+shortcut
+.
+-
+-
+>
+<
+string
+name
+=
+"
+shortcut_url_hint
+"
+>
+.
+.
+.
+<
+/
+string
+>
+<
+!
+-
+-
 Dialog
 button
 text
@@ -30790,6 +31507,36 @@ string
 !
 -
 -
+Text
+for
+the
+dialog
+title
+to
+edit
+a
+top
+site
+.
+-
+-
+>
+<
+string
+name
+=
+"
+top_sites_edit_dialog_title
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
 Button
 caption
 to
@@ -30812,6 +31559,37 @@ name
 top_sites_edit_dialog_save
 "
 >
+<
+/
+string
+>
+<
+!
+-
+-
+Error
+message
+when
+the
+user
+entered
+an
+invalid
+URL
+-
+-
+>
+<
+string
+name
+=
+"
+top_sites_edit_dialog_url_error
+"
+>
+.
+.
+.
 <
 /
 string
@@ -32259,6 +33037,55 @@ ignore
 UnusedResources
 "
 >
+<
+/
+string
+>
+<
+!
+-
+-
+Caption
+for
+recommended
+product
+section
+indicating
+this
+is
+an
+ad
+by
+Fakespot
+.
+First
+parameter
+is
+the
+Fakespot
+product
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+review_quality_check_ad_caption
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+%
+s
 <
 /
 string
@@ -34414,6 +35241,43 @@ translation_error_could_not_translate_warning_text
 >
 .
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Snackbar
+title
+shown
+if
+the
+user
+closes
+the
+Translation
+Request
+dialogue
+and
+a
+translation
+is
+in
+progress
+.
+-
+-
+>
+<
+string
+name
+=
+"
+translation_in_progress_snackbar
+"
+>
 <
 /
 string
