--- a/mobile/android/fenix/app/src/main/res/values-tt/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-tt/strings.xml
@@ -273,6 +273,44 @@ string
 !
 -
 -
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+"
+Private
+Browsing
+"
+menu
+button
+.
+-
+-
+>
+<
+string
+name
+=
+"
+content_description_private_browsing
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
 Placeholder
 text
 shown
@@ -1146,6 +1184,20 @@ name
 =
 "
 tcp_cfr_learn_more
+"
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 Cookie
@@ -2166,6 +2218,193 @@ menu
 button
 that
 opens
+the
+extensions
+manager
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_manage_extensions
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+Section
+heading
+for
+recommended
+extensions
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_recommended_section_content_description
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+Label
+for
+plus
+icon
+used
+to
+add
+extension
+.
+The
+first
+parameter
+is
+the
+name
+of
+the
+extension
+(
+for
+example
+:
+ClearURLs
+)
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_extension_plus_icon_content_description_2
+"
+>
+%
+1
+s
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+button
+that
+opens
+AMO
+in
+a
+tab
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_discover_more_extensions
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+description
+that
+is
+shown
+when
+one
+or
+more
+extensions
+are
+disabled
+due
+to
+extension
+errors
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_extensions_disabled_description
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+button
+that
+opens
 account
 settings
 -
@@ -2986,6 +3225,44 @@ string
 -
 Browser
 menu
+button
+to
+show
+reader
+view
+appearance
+controls
+e
+.
+g
+.
+the
+used
+font
+type
+and
+size
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_customize_reader_view_2
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
 label
 for
 adding
@@ -3090,6 +3367,129 @@ name
 =
 "
 browser_menu_sign_in
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+caption
+label
+for
+the
+"
+Sign
+in
+"
+browser
+menu
+item
+described
+in
+browser_menu_sign_in
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_sign_in_caption
+"
+>
+.
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+label
+to
+sign
+back
+in
+to
+sync
+on
+the
+device
+when
+the
+user
+'
+s
+account
+needs
+to
+be
+reauthenticated
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_sign_back_in_to_sync
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+caption
+label
+for
+the
+"
+Sign
+back
+in
+to
+sync
+"
+browser
+menu
+item
+described
+in
+browser_menu_sign_back_in_to_sync
+when
+there
+is
+an
+error
+in
+syncing
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_syncing_paused_caption
 "
 >
 <
@@ -3399,6 +3799,59 @@ string
 !
 -
 -
+Browser
+menu
+label
+for
+the
+Delete
+browsing
+data
+on
+quit
+feature
+.
+The
+first
+parameter
+is
+the
+name
+of
+the
+app
+defined
+in
+app_name
+(
+for
+example
+:
+Fenix
+)
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_delete_browsing_data_on_quit
+"
+>
+%
+1
+s
+<
+/
+string
+>
+<
+!
+-
+-
 Extensions
 management
 fragment
@@ -3686,6 +4139,20 @@ name
 =
 "
 search_scan_button
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 <
@@ -4073,6 +4540,13 @@ ignore
 "
 UnusedResources
 "
+moz
+:
+removedIn
+=
+"
+133
+"
 >
 %
 s
@@ -4383,170 +4857,6 @@ string
 !
 -
 -
-Notification
-pre
--
-permission
-dialog
--
--
->
-<
-!
--
--
-Enable
-notification
-pre
-permission
-dialog
-title
-The
-first
-parameter
-is
-the
-name
-of
-the
-app
-defined
-in
-app_name
-(
-for
-example
-:
-Fenix
-)
--
--
->
-<
-string
-name
-=
-"
-onboarding_home_enable_notifications_title
-"
-moz
-:
-removedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-%
-s
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-the
-button
-to
-request
-notification
-permission
-on
-the
-device
--
--
->
-<
-string
-name
-=
-"
-onboarding_home_enable_notifications_positive_button
-"
-moz
-:
-removedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-the
-button
-to
-not
-request
-notification
-permission
-on
-the
-device
-and
-dismiss
-the
-dialog
--
--
->
-<
-string
-name
-=
-"
-onboarding_home_enable_notifications_negative_button
-"
-moz
-:
-removedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-<
-/
-string
->
-<
-!
--
--
 Juno
 first
 user
@@ -4592,6 +4902,13 @@ name
 "
 juno_onboarding_privacy_notice_text
 "
+tools
+:
+ignore
+=
+"
+BrandUsage
+"
 >
 Firefox
 <
@@ -4624,69 +4941,6 @@ name
 =
 "
 juno_onboarding_default_browser_title_nimbus_2
-"
->
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-the
-link
-to
-the
-privacy
-notice
-webpage
-for
-set
-as
-firefox
-default
-browser
-screen
-.
-This
-is
-part
-of
-the
-string
-with
-the
-key
-"
-juno_onboarding_default_browser_description
-"
-.
--
--
->
-<
-string
-name
-=
-"
-juno_onboarding_default_browser_description_link_text
-"
-moz
-:
-RemovedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 <
@@ -4978,6 +5232,7 @@ tools
 ignore
 =
 "
+BrandUsage
 UnusedResources
 "
 >
@@ -5022,6 +5277,386 @@ ignore
 UnusedResources
 "
 >
+<
+/
+string
+>
+<
+!
+-
+-
+Onboarding
+add
+-
+ons
+card
+button
+for
+start
+browsing
+used
+by
+Nimbus
+experiments
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_start_browsing_button
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+>
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Onboarding
+add
+-
+ons
+card
+button
+for
+start
+browsing
+used
+by
+Nimbus
+experiments
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_start_browsing_button_2
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Ublock
+name
+for
+the
+onboarding
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+Note
+:
+The
+word
+"
+Ublock
+Origin
+"
+is
+a
+brand
+name
+should
+NOT
+be
+translated
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_ublock_name
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+uBlock
+Origin
+<
+/
+string
+>
+<
+!
+-
+-
+Privacy
+Badger
+name
+for
+the
+onboarding
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+Note
+:
+The
+word
+"
+Privacy
+Badger
+"
+is
+a
+brand
+name
+should
+NOT
+be
+translated
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_privacy_badger_name
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Privacy
+Badger
+<
+/
+string
+>
+<
+!
+-
+-
+Search
+by
+Image
+name
+for
+the
+onboarding
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+Note
+:
+The
+word
+"
+Search
+by
+Image
+"
+is
+a
+brand
+name
+should
+NOT
+be
+translated
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_search_by_image_name
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Search
+by
+Image
+<
+/
+string
+>
+<
+!
+-
+-
+Dark
+Reader
+name
+for
+the
+onboarding
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+Note
+:
+The
+word
+"
+Dark
+Reader
+"
+is
+a
+brand
+name
+should
+NOT
+be
+translated
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_dark_reader_name
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Dark
+Reader
+<
+/
+string
+>
+<
+!
+-
+-
+Label
+for
+the
+number
+of
+reviews
+for
+an
+add
+-
+on
+.
+The
+parameter
+is
+for
+the
+formatted
+number
+of
+reviews
+e
+.
+g
+.
+"
+1
+234
+"
+"
+12
+345
+"
+"
+123
+456
+"
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_reviews_label
+"
+>
+:
+%
+1
+s
 <
 /
 string
@@ -5650,6 +6285,20 @@ name
 =
 "
 preferences_site_permissions
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 <
@@ -6501,47 +7150,6 @@ name
 =
 "
 preferences_category_account
-"
->
-<
-/
-string
->
-<
-!
--
--
-Preference
-for
-changing
-where
-the
-toolbar
-is
-positioned
--
--
->
-<
-string
-name
-=
-"
-preferences_toolbar
-"
-moz
-:
-removedIn
-=
-"
-129
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 <
@@ -8792,6 +9400,13 @@ name
 "
 fxa_received_tab_channel_description
 "
+tools
+:
+ignore
+=
+"
+BrandUsage
+"
 >
 Firefox
 .
@@ -9425,49 +10040,6 @@ name
 =
 "
 preference_gestures_dynamic_toolbar
-"
->
-<
-/
-string
->
-<
-!
--
--
-Preference
-for
-switching
-tabs
-by
-swiping
-horizontally
-on
-the
-toolbar
--
--
->
-<
-string
-name
-=
-"
-preference_gestures_swipe_toolbar_switch_tabs
-"
-moz
-:
-removedIn
-=
-"
-129
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 <
@@ -11766,49 +12338,6 @@ the
 menu
 button
 to
-rename
-a
-top
-site
--
--
->
-<
-string
-name
-=
-"
-rename_top_site
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-the
-menu
-button
-to
 remove
 a
 top
@@ -12715,6 +13244,20 @@ name
 =
 "
 bookmark_saved_snackbar
+"
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 c
@@ -15752,6 +16295,13 @@ name
 "
 sync_connect_device_dialog
 "
+tools
+:
+ignore
+=
+"
+BrandUsage
+"
 >
 Firefox
 -
@@ -16143,6 +16693,20 @@ name
 "
 snackbar_message_bookmarks_saved
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 c
 !
@@ -16522,51 +17086,6 @@ name
 =
 "
 tab_collection_dialog_positive
-"
->
-<
-/
-string
->
-<
-!
--
--
-Text
-displayed
-in
-a
-notification
-when
-the
-user
-enters
-full
-screen
-mode
--
--
->
-<
-string
-name
-=
-"
-full_screen_notification
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 <
@@ -17516,6 +18035,13 @@ name
 "
 sign_in_instructions
 "
+tools
+:
+ignore
+=
+"
+BrandUsage
+"
 >
 <
 !
@@ -17662,6 +18188,13 @@ name
 =
 "
 sign_in_create_account_text
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
 "
 >
 <
@@ -18381,51 +18914,6 @@ string
 !
 -
 -
-Preference
-for
-enhanced
-tracking
-protection
-for
-the
-custom
-protection
-settings
--
--
->
-<
-string
-name
-=
-"
-preference_enhanced_tracking_protection_custom_fingerprinters
-"
-moz
-:
-RemovedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-(
-)
-<
-/
-string
->
-<
-!
--
--
 Button
 label
 for
@@ -18621,55 +19109,6 @@ name
 etp_cryptominers_title
 "
 >
-<
-/
-string
->
-<
-!
--
--
-Category
-of
-trackers
-(
-fingerprinters
-)
-that
-can
-be
-blocked
-by
-Enhanced
-Tracking
-Protection
--
--
->
-<
-string
-name
-=
-"
-etp_fingerprinters_title
-"
-moz
-:
-RemovedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-(
-)
 <
 /
 string
@@ -22554,6 +22993,13 @@ name
 "
 synced_tabs_no_tabs
 "
+tools
+:
+ignore
+=
+"
+BrandUsage
+"
 >
 Firefox
 -
@@ -22774,50 +23220,6 @@ name
 =
 "
 top_sites_rename_dialog_title
-"
->
-<
-/
-string
->
-<
-!
--
--
-Button
-caption
-to
-confirm
-the
-renaming
-of
-the
-top
-site
-.
--
--
->
-<
-string
-name
-=
-"
-top_sites_rename_dialog_ok
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 <
@@ -23143,6 +23545,7 @@ tools
 ignore
 =
 "
+BrandUsage
 UnusedResources
 "
 >
@@ -23250,6 +23653,13 @@ name
 "
 default_browser_experiment_card_text
 "
+tools
+:
+ignore
+=
+"
+BrandUsage
+"
 >
 .
 Firefox
@@ -23339,20 +23749,6 @@ name
 =
 "
 action_bar_up_description
-"
-moz
-:
-removedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 <
@@ -23533,6 +23929,13 @@ name
 =
 "
 pocket_stories_feature_caption
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
 "
 >
 Firefox
