--- a/mobile/android/android-components/components/browser/menu/src/main/res/values-tt/strings.xml
+++ b/mobile/android/android-components/components/browser/menu/src/main/res/values-tt/strings.xml
@@ -160,6 +160,34 @@ string
 !
 -
 -
+Label
+for
+extensions
+sub
+menu
+item
+for
+extensions
+manager
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_menu_extensions_manager
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
 Content
 description
 for
@@ -179,6 +207,55 @@ name
 =
 "
 action_bar_up_description
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+action
+bar
+"
+up
+"
+button
+of
+the
+extensions
+sub
+menu
+item
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_menu_extensions_content_description
 "
 >
 <
