--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-tt/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-tt/strings.xml
@@ -1589,6 +1589,37 @@ string
 !
 -
 -
+A
+link
+that
+points
+to
+the
+detail
+page
+of
+the
+extension
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_more_info_link_2
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
 The
 settings
 of
@@ -2479,6 +2510,41 @@ string
 !
 -
 -
+Text
+link
+to
+learn
+more
+about
+permission
+requests
+on
+the
+add
+-
+on
+permissions
+dialog
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_dialog_learn_more
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
 This
 is
 a
@@ -2737,6 +2803,99 @@ name
 =
 "
 mozac_feature_addons_addons_manager
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+The
+title
+of
+the
+"
+crash
+"
+notification
+in
+the
+extensions
+manager
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_extensions_manager_notification_title_text
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Button
+to
+re
+-
+enable
+the
+extensions
+in
+the
+"
+crash
+"
+notification
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_extensions_manager_notification_restart_button
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Button
+in
+the
+extensions
+manager
+that
+opens
+AMO
+in
+a
+tab
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_find_more_extensions_button_text
 "
 >
 <
@@ -3008,6 +3167,60 @@ name
 =
 "
 mozac_feature_addons_updater_notification_content_singular
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Name
+of
+the
+"
+notification
+channel
+"
+used
+for
+displaying
+a
+notification
+for
+updating
+an
+extension
+.
+See
+https
+:
+/
+/
+developer
+.
+android
+.
+com
+/
+training
+/
+notify
+-
+user
+/
+channels
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_updater_notification_channel_2
 "
 >
 <
@@ -3568,13 +3781,29 @@ string
 Text
 shown
 after
-failed
+failing
 to
 install
 an
 add
 -
 on
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 %
 1
@@ -3600,6 +3829,60 @@ mozac_feature_addons_failed_to_install
 %
 1
 s
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+after
+failing
+to
+install
+an
+extension
+for
+which
+we
+don
+'
+t
+have
+its
+name
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_extension_failed_to_install
+"
+>
+.
 <
 /
 string
@@ -3713,6 +3996,20 @@ name
 =
 "
 mozac_feature_addons_blocklisted_1
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 %
@@ -4686,6 +4983,39 @@ string
 !
 -
 -
+"
+See
+details
+"
+link
+displayed
+below
+an
+add
+-
+on
+status
+message
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_see_details
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
 Status
 message
 below
@@ -4727,6 +5057,20 @@ name
 =
 "
 mozac_feature_addons_status_blocklisted
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 %
