--- a/mobile/android/android-components/components/feature/prompts/src/main/res/values-tt/strings.xml
+++ b/mobile/android/android-components/components/feature/prompts/src/main/res/values-tt/strings.xml
@@ -328,51 +328,6 @@ string
 name
 =
 "
-mozac_feature_prompt_dont_save
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-<
-/
-string
->
-<
-!
--
--
-Negative
-confirmation
-that
-we
-should
-not
-save
-the
-new
-or
-updated
-login
--
--
->
-<
-string
-name
-=
-"
 mozac_feature_prompt_dont_save_2
 "
 >
@@ -496,49 +451,6 @@ string
 name
 =
 "
-mozac_feature_prompt_dont_update
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-<
-/
-string
->
-<
-!
--
--
-Negative
-confirmation
-that
-we
-should
-not
-save
-the
-updated
-login
--
--
->
-<
-string
-name
-=
-"
 mozac_feature_prompt_dont_update_2
 "
 >
@@ -600,101 +512,7 @@ string
 name
 =
 "
-mozac_feature_prompt_error_empty_password
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-<
-/
-string
->
-<
-!
--
--
-Error
-text
-displayed
-underneath
-the
-password
-field
-when
-it
-is
-in
-an
-error
-case
--
--
->
-<
-string
-name
-=
-"
 mozac_feature_prompt_error_empty_password_2
-"
->
-<
-/
-string
->
-<
-!
--
--
-Error
-text
-displayed
-underneath
-the
-login
-field
-when
-it
-is
-in
-an
-error
-case
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompt_error_unknown_cause
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 <
@@ -762,66 +580,6 @@ should
 save
 the
 new
-login
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompt_login_save_headline
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-?
-<
-/
-string
->
-<
-!
--
--
-Prompt
-message
-displayed
-when
-app
-detects
-a
-user
-has
-entered
-a
-new
-username
-and
-password
-and
-user
-decides
-if
-app
-should
-save
-the
-new
 password
 .
 -
@@ -833,67 +591,6 @@ name
 =
 "
 mozac_feature_prompt_login_save_headline_2
-"
->
-?
-<
-/
-string
->
-<
-!
--
--
-Prompt
-message
-displayed
-when
-app
-detects
-a
-user
-has
-entered
-a
-new
-password
-for
-an
-existing
-login
-and
-user
-decides
-if
-app
-should
-update
-the
-login
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompt_login_update_headline
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 ?
@@ -989,21 +686,7 @@ string
 name
 =
 "
-mozac_feature_prompt_login_add_username_headline
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
+mozac_feature_prompt_login_add_username_headline_2
 "
 >
 ?
@@ -1845,50 +1528,6 @@ Option
 in
 expanded
 select
-login
-prompt
-that
-links
-to
-login
-settings
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_manage_logins
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-<
-/
-string
->
-<
-!
--
--
-Option
-in
-expanded
-select
 password
 prompt
 that
@@ -1905,52 +1544,6 @@ name
 =
 "
 mozac_feature_prompts_manage_logins_2
-"
->
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-for
-expanding
-the
-saved
-logins
-options
-in
-the
-select
-login
-prompt
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_expand_logins_content_description
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 <
@@ -1999,52 +1592,6 @@ for
 collapsing
 the
 saved
-logins
-options
-in
-the
-select
-login
-prompt
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_collapse_logins_content_description
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-for
-collapsing
-the
-saved
 passwords
 options
 in
@@ -2061,56 +1608,6 @@ name
 =
 "
 mozac_feature_prompts_collapse_logins_content_description_2
-"
->
-<
-/
-string
->
-<
-!
--
--
-Header
-for
-the
-select
-login
-prompt
-to
-allow
-users
-to
-fill
-a
-form
-with
-a
-saved
-login
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_saved_logins
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 <
@@ -2223,58 +1720,6 @@ string
 name
 =
 "
-mozac_feature_prompts_suggest_strong_password
-"
-moz
-:
-removedIn
-=
-"
-128
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-<
-/
-string
->
-<
-!
--
--
-Header
-for
-the
-suggest
-strong
-password
-prompt
-to
-allow
-users
-to
-fill
-a
-form
-with
-a
-suggested
-strong
-password
--
--
->
-<
-string
-name
-=
-"
 mozac_feature_prompts_suggest_strong_password_2
 "
 >
@@ -2321,6 +1766,35 @@ mozac_feature_prompts_suggest_strong_password_message
 %
 1
 s
+<
+/
+string
+>
+<
+!
+-
+-
+Title
+for
+using
+the
+suggest
+strong
+password
+confirmation
+dialog
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_suggest_strong_password_title
+"
+>
+?
 <
 /
 string
@@ -2597,59 +2071,6 @@ Header
 for
 the
 select
-credit
-card
-prompt
-to
-allow
-users
-to
-fill
-a
-form
-with
-a
-saved
-credit
-card
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_select_credit_card
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-<
-/
-string
->
-<
-!
--
--
-Header
-for
-the
-select
 card
 prompt
 to
@@ -2673,55 +2094,6 @@ name
 =
 "
 mozac_feature_prompts_select_credit_card_2
-"
->
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-for
-expanding
-the
-select
-credit
-card
-options
-in
-the
-select
-credit
-card
-prompt
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_expand_credit_cards_content_description
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 <
@@ -2770,54 +2142,6 @@ description
 for
 collapsing
 the
-select
-credit
-card
-options
-in
-the
-select
-credit
-prompt
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_collapse_credit_cards_content_description
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-for
-collapsing
-the
 saved
 card
 options
@@ -2835,54 +2159,6 @@ name
 =
 "
 mozac_feature_prompts_collapse_credit_cards_content_description_2
-"
->
-<
-/
-string
->
-<
-!
--
--
-Option
-in
-the
-expanded
-select
-credit
-card
-prompt
-that
-links
-to
-credit
-cards
-settings
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_manage_credit_cards
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 <
@@ -2995,54 +2271,6 @@ the
 title
 of
 the
-save
-credit
-card
-dialog
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_save_credit_card_prompt_body
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-.
-.
-<
-/
-string
->
-<
-!
--
--
-Subtitle
-text
-displayed
-under
-the
-title
-of
-the
 saved
 card
 dialog
@@ -3128,53 +2356,6 @@ description
 for
 expanding
 the
-select
-addresses
-options
-in
-the
-select
-address
-prompt
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_expand_address_content_description
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-for
-expanding
-the
 saved
 addresses
 options
@@ -3193,53 +2374,6 @@ name
 =
 "
 mozac_feature_prompts_expand_address_content_description_2
-"
->
-<
-/
-string
->
-<
-!
--
--
-Content
-description
-for
-collapsing
-the
-select
-address
-options
-in
-the
-select
-address
-prompt
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_prompts_collapse_address_content_description
-"
-moz
-:
-removedIn
-=
-"
-125
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 <
