--- a/mobile/android/fenix/app/src/main/res/values-th/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-th/strings.xml
@@ -273,6 +273,44 @@ string
 !
 -
 -
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+"
+Private
+Browsing
+"
+menu
+button
+.
+-
+-
+>
+<
+string
+name
+=
+"
+content_description_private_browsing
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
 Placeholder
 text
 shown
@@ -3260,6 +3298,42 @@ name
 =
 "
 browser_menu_extensions_disabled_description
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+The
+description
+of
+the
+browser
+menu
+appears
+when
+the
+user
+hasn
+'
+t
+installed
+any
+extensions
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_no_extensions_installed_description
 "
 >
 <
@@ -8356,6 +8430,66 @@ name
 onboarding_add_on_icon_content_description
 "
 >
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+add
+add
+-
+on
+button
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_add_button_content_description
+"
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+star
+rating
+group
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_star_rating_content_description
+"
+>
+%
+1
+s
+5
 <
 /
 string
@@ -18457,6 +18591,41 @@ name
 =
 "
 bookmark_delete_folder_confirmation_dialog
+"
+>
+?
+<
+/
+string
+>
+<
+!
+-
+-
+Confirmation
+message
+for
+a
+dialog
+confirming
+if
+the
+user
+wants
+to
+delete
+multiple
+items
+.
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_delete_folders_confirmation_dialog
 "
 >
 ?
